style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');

body {
    font-family: 'Nunito', sans-serif;
    margin:0;
    background-color: #fffaeb;
    color: #343633;
}

a {
    text-decoration: none;
    color: #343633;
}

a:hover {
    color: #fffaeb;
    font-weight: 700;
}

img {
    border-radius: 20px;
}

button {
    border-radius: 25px;
    padding: 20px;
    border-style: none;
    font-size: 18px;
    font-family: inherit;
    color:#fffaeb;
    background-color: #343633;
}

button:hover {
    background-color: #494b48;
}

p {
    font-size: 18px;
}

/* HEADER */
.header {
    background-color: #fde482;
    display:flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 100px;
}

ul {
    list-style-type: none;
    margin:0;
    padding: 0;
    display:flex;
    gap: 20px;
    font-size: 18px;
}

.logo {
    font-size: 24px;
    font-weight: 900;
}


/* SEC ONE */
.one {
    display:flex;
    flex-wrap: wrap-reverse;
    justify-content: center;
    align-items: center;
    padding: 80px 100px;
    gap:20px;
}

.intro {
    flex: 1 0 350px;
}

h1 {
    font-size: 48px;
    font-weight: 900;
}

/* SEC TWO */
.two, .four {
    background-color: #faf9f6;
}

.two {
    display:flex;
    flex-direction: column;
    align-items: center;
    gap:20px;
    padding: 20px 100px 100px 100px;
}

.twotext {
    text-align: center;
}

h2 {
    font-size:40px;
    font-weight:900;
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.two p {
    margin-top:0px;
    font-style: italic;
}
.pastr-hold {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.pastr {
    width:250px;
    text-align: center;
}
.imtwo {
    width: 200px;
    border-style: solid;
    border-width: 5px;
    border-color:#343633;
}

/* SEC THREE */
.three {
    padding: 100px 300px;
    display: flex;
    justify-content: center;
}

.full-quote {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-width: 1000px;
    align-content: center;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight:300;
}

.quotee {
    text-align:right;
    font-weight:700;
}

/* SEC FOUR */
.four {
    display:flex;
    justify-content: center;
}
.cta {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 50px;
    background-color:#fde482;
    border-radius: 25px;
    margin: 80px;
    padding:40px 60px;
    max-width: 1200px;

}

.cta button {
    border-style: solid;
    border-color:#fffaeb;
    border-width: 5px;
}
/*FOOTER*/
footer {
    display:flex;
    background-color: #fde482;
    justify-content: center;
    align-items: center;
    padding: 20px;
    font-size:18px;

}

